drrx/fixtures/invalid/invalid-file-has-child.tree.drrx
.                         # root
+== file.txt              # file node
  +== illegal-child.txt   # EXPECTED ERROR: FW.10 files never have children
